buttons, another gif+music and optimization of code

--- a/home.html
+++ b/home.html
@@ -1,22 +1,14 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>Gifs and Musics</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
-  </head>
-  <body>
-     <!-- <div style="position:relative;width:267px;height:25px;overflow:hidden;"> -->
-      <iframe id="video" src="https://www.youtube.com/embed/o3hEYqIOfrU?autoplay=1&rel=0"></iframe>
-    <!-- <div style="position:absolute;top:-276px;left:-5px">
-    <iframe width="300" height="300"
-      src="https://www.youtube.com/embed/o3hEYqIOfrU?rel=0">
-    </iframe>
-    </div>
-    </div>  -->
-    <script src="./script.js"></script>
-    <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script> -->
-    <!-- <audio id="youtube" autoplay controls loop></audio> -->
-  </body>
-
+    <head>
+        <meta charset="utf-8">
+        <title>Gifs and Musics</title>
+        <link rel="stylesheet" type="text/css" href="style.css">
+    </head>
+    <body>
+        <button id="go-back"><</button>
+        <button id="go-next">></button>
+        <iframe id="video" src="https://www.youtube.com/embed/o3hEYqIOfrU?autoplay=1&rel=0"></iframe>
+        <script src="./script.js"></script>
+    </body>
 </html>
