--- a/home.html
+++ b/home.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8">
         <title>Gifs and Musics</title>
         <link rel="stylesheet" type="text/css" href="style.css">
+        <link rel="shortcut icon" href="./img/1.gif" />
     </head>
     <body>
         <button id="go-back"><</button>
