--- a/html/home.html
+++ b/html/home.html
@@ -5,7 +5,7 @@
         <title>Gifs and Musics</title>
         <link rel="stylesheet" type="text/css" href="../css/button-bootstrap.css">
         <link rel="stylesheet" type="text/css" href="../css/style.css">
-        <link rel="shortcut icon" href="./img/0.gif" />
+        <link rel="shortcut icon" href="../img/0.gif" />
     </head>
     <body>
         <button id="go-back" class="btn btn-default" disabled=true><</button>
