--- a/html/home.html
+++ b/html/home.html
@@ -12,7 +12,7 @@
         <button id="go-next" class="btn btn-default">></button>
         <div id="div1">
             <div id="div2">
-                <iframe id="video" width="300" height="300" src="https://www.youtube.com/embed/o3hEYqIOfrU?autoplay=1&rel=0"> </iframe>
+                <!-- <iframe id="video" width="300" height="300" src="https://www.youtube.com/embed/o3hEYqIOfrU?enablejsapi=1&autoplay=1&rel=0"> </iframe> -->
             </div>
         </div>
         <script src="../js/script.js"></script>
