Issue #3 fixed and the array is now circular.

--- a/html/home.html
+++ b/html/home.html
@@ -8,12 +8,10 @@
         <link rel="shortcut icon" href="../img/0.gif" />
     </head>
     <body>
-        <button id="go-back" class="btn btn-default" disabled=true><</button>
+        <button id="go-back" class="btn btn-default"><</button>
         <button id="go-next" class="btn btn-default">></button>
         <div id="div1">
-            <div id="div2">
-                <!-- <iframe id="video" width="300" height="300" src="https://www.youtube.com/embed/o3hEYqIOfrU?enablejsapi=1&autoplay=1&rel=0"> </iframe> -->
-            </div>
+            <div id="div2"></div>
         </div>
         <script src="../js/script.js"></script>
     </body>
